fix: add streaming capability
